# MIT License - Copyright (c) fintonlabs.com
[project]
name = "rundeck-mcp"
version = "0.1.0"
description = "Rundeck MCP (Model Context Protocol) server for managing projects, jobs, and executions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]~=1.8",
    "httpx~=0.28",
    "typer~=0.16.0",
]

[project.scripts]
rundeck-mcp = "rundeck_mcp.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright~=1.1",
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "ruff~=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
